Fix manual refresh button
ISSUE: PL4CR51I-5

--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -68,6 +68,10 @@
     &.pl-button-primary {
       background-color: $color-blue;
       color: $color-white;
+      &.pl-normal {
+        text-transform: none;
+        margin: 0;
+      }
     }
 
     &.pl-button-secondary {
