Change password validation
ISSUE:CS5SII-4

--- a/src/BusinessLogic/Resources/templates/register.html
+++ b/src/BusinessLogic/Resources/templates/register.html
@@ -22,8 +22,10 @@
                            type="password"
                            class="form-control"
                            name="password"
-                           data-min-length="6"
-                           data-type="password" data-required="true"/>
+                           data-min-length="12"
+                           data-type="password" data-required="true"
+                           title="{$register.passwordRestriction}"
+                    />
                     <label for="pl-register-password">
                         {$register.password}
                     </label>
