--- a/src/BusinessLogic/Resources/css/app.css
+++ b/src/BusinessLogic/Resources/css/app.css
@@ -746,6 +746,11 @@
   font-size: 16px;
   line-height: 19px;
 }
+
+#pl-cod-form .pl-config-section h2{
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
 #pl-page .pl-modal-mask .pl-modal .pl-modal-body {
   padding: 20px 40px;
   align-items: flex-start;
