Add info on configuration page
ISSUE: UCS5CODSMI-36

--- a/src/BusinessLogic/Resources/templates/cash-on-delivery.html
+++ b/src/BusinessLogic/Resources/templates/cash-on-delivery.html
@@ -24,6 +24,13 @@
                 <label for="pl-cod-active">{$cashOnDelivery.activate}</label>
             </div>
 
+            <div class="pl-cod-info-box">
+                <i class="material-icons pl-cod-info-icon">info</i>
+                <p class="pl-cod-info-text">
+                    {$cashOnDelivery.infoMessage}
+                </p>
+            </div>
+
             <div class="pl-form-group pl-config-section">
 
                 <h2 class="pl-full-width">
