--- a/src/BusinessLogic/Resources/css/app.css
+++ b/src/BusinessLogic/Resources/css/app.css
@@ -751,6 +751,38 @@
   padding-bottom: 20px;
   padding-top: 20px;
 }
+
+#pl-cod-form #pl-desc-second {
+  padding-top: 20px;
+}
+
+#pl-cod-form .pl-cod-info-box {
+  display: flex;
+  background-color: #f0f8ff;
+  border-left: 4px solid #2196F3;
+  padding: 10px;
+  margin-top: 8px;
+  border-radius: 4px;
+  flex-direction: row;
+  gap: 8px;
+}
+
+#pl-cod-form .pl-cod-info-icon {
+  font-size: 20px;
+  color: #2196F3;
+  margin-right: 8px;
+  margin-top: 2px;
+  flex-shrink: 0;
+}
+
+#pl-cod-form .pl-cod-info-text {
+  font-size: 13px;
+  margin-right: 30px;
+  color: #333;
+  align-content: center;
+  flex: 1;
+}
+
 #pl-page .pl-modal-mask .pl-modal .pl-modal-body {
   padding: 20px 40px;
   align-items: flex-start;
