--- a/src/BusinessLogic/Resources/templates/cash-on-delivery.html
+++ b/src/BusinessLogic/Resources/templates/cash-on-delivery.html
@@ -15,7 +15,7 @@
                 {$cashOnDelivery.descriptionFirst}
             </p>
 
-            <p class="pl-text-center pl-page-info">
+            <p id="pl-desc-second" class="pl-text-center pl-page-info">
                 {$cashOnDelivery.descriptionSecond}
             </p>
 
