Fix style issue on oauth page
ISSUE: PKLPM-69

--- a/src/BusinessLogic/Resources/templates/login-oauth.html
+++ b/src/BusinessLogic/Resources/templates/login-oauth.html
@@ -10,7 +10,6 @@
         </div>
         <div id="pl-oauth-form" class="pl-full-width">
             <div class="pl-form-group">
-
                 <select id="pl-connect-select-country">
                     <option value="ES" selected>{$countries.ES}</option>
                     <option value="FR">{$countries.FR}</option>
@@ -18,6 +17,7 @@
                     <option value="IT">{$countries.IT}</option>
                     <option value="WW">{$countries.WW}</option>
                 </select>
+                <i class="material-icons">expand_more</i>
 
             </div>
             <button id="pl-connect-button" class="pl-button pl-button-primary" disabled>
